# multi-manga

./: .env  README.md  main.py  pyproject.toml
src/multimng/: __init__.py  config.py
src/multimng/_http/: __init__.py  errors.py
src/multimng/core/: base.py  errors.py  mngparser.py
src/multimng/models/: __init__.py  entites.py
src/multimng/service/: __init__.py  manga_service.py
src/multimng/tools/: __init__.py
