[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-manga"
dynamic = ["version"]
description = "Parser for animehidecq.org website"
authors = [
    {name = "alikegorplay", email = "alikegorplay@gmail.com"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["hentai", "parser", "downloader", "multi-manga"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "aiofiles>=23.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "hhttps://github.com/alikegorplay-afk/multi-manga"
"Bug Reports" = "https://github.com/alikegorplay-afk/multi-manga/issues"
"Source" = "https://github.com/alikegorplay-afk/multi-manga"
